// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongOperationIndicator (snapshot) > renders at ~5s elapsed (not slow) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, #2E7D32);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 16px; height: 16px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk claude-asterisk--active"
          data-brand="clover"
          data-claude-asterisk="active"
          data-claude-asterisk-weight="fine"
          height="16"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, #2E7D32);"
          viewBox="0 0 512 512"
          width="16"
        >
          <g
            fill="currentColor"
          >
            <g
              transform="translate(256 244)"
            >
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(0)"
              />
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(90)"
              />
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(180)"
              />
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(270)"
              />
              <path
                d="M -6 12 C -2 70, 4 120, 22 170 C 34 202, 62 216, 82 200 C 92 192, 86 178, 74 182 C 54 190, 44 178, 36 156 C 22 118, 16 70, 12 12 Z"
              />
            </g>
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-muted-foreground"
    >
      5
      s
    </span>
  </div>
</div>
`;

exports[`LongOperationIndicator (snapshot) > renders at ~35s elapsed (slow state) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, #2E7D32);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 16px; height: 16px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk claude-asterisk--active"
          data-brand="clover"
          data-claude-asterisk="active"
          data-claude-asterisk-weight="fine"
          height="16"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, #2E7D32);"
          viewBox="0 0 512 512"
          width="16"
        >
          <g
            fill="currentColor"
          >
            <g
              transform="translate(256 244)"
            >
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(0)"
              />
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(90)"
              />
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(180)"
              />
              <path
                d="M0 0 C -16 -30, -62 -44, -76 -84 C -90 -124, -56 -154, -28 -136 C -12 -126, -5 -112, 0 -100 C 5 -112, 12 -126, 28 -136 C 56 -154, 90 -124, 76 -84 C 62 -44, 16 -30, 0 0 Z"
                transform="rotate(270)"
              />
              <path
                d="M -6 12 C -2 70, 4 120, 22 170 C 34 202, 62 216, 82 200 C 92 192, 86 178, 74 182 C 54 190, 44 178, 36 156 C 22 118, 16 70, 12 12 Z"
              />
            </g>
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-amber-600"
    >
      35
      s
       · está tardando más de lo habitual
    </span>
  </div>
</div>
`;
